--- a/src/routes/sign-in/sign-in.styles.scss
+++ b/src/routes/sign-in/sign-in.styles.scss
@@ -16,3 +16,11 @@
     justify-content: space-between;
   }
 }
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+}
